--- a/app/src/main/res/layout/activity_login_as.xml
+++ b/app/src/main/res/layout/activity_login_as.xml
@@ -19,23 +19,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginBottom="12dp"
         android:gravity="center"
         android:text="Masuk"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/imgLogo" />
+        app:layout_constraintBottom_toTopOf="@+id/btnSeller" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnSeller"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="32dp"
         android:text="Seller"
         app:cornerRadius="18dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvMasuk" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnCustomer"
